feat: add the extraFoodRight logic in Player, Tribe and OfferTurnCard